fix overflow

--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
   padding: 0;
   box-sizing: border-box;
   font-family: "Sevillana", cursive;
+  overflow: hidden;
 }
 
 @import url("https://fonts.googleapis.com/css2?family=Sevillana&display=swap");
